test/libsolidity/syntaxTests/constants/file_level_multiple_constant_keywords.sol
uint constant constant x;
// ----
// ParserError 3109: (14-22): Mutability already set to "constant"

